solve warnings of SlotServiceTest